# 3D4EM-LoD2buildingmodels

./: Manual LoD2 building modelling.docx  README.md
Foreign/: Makefile.linux  Makefile.win
Foreign/ANN/: ANN.cbp  ANN.depend  ANN.dev  ANN.layout  Makefile.linux  Makefile_ANN.win  ann.diff
Foreign/ANN/src/: ANN.cpp  kd_dump.cpp
Foreign/ENLSIP/: ENLSIP.dev  ENLSIP.layout  ENLSIPFitting.cc  ENLSIPFitting.h  Makefile_ENLSIP.win  Makefile_linux  ShMacro.h  dblTest.cc  dblenls.c  dblmod2nls.c  dblredunls.c  dblwrkset.c
Foreign/Eispack/: Eispack.dev  Eispack.layout  Makefile_Eispack.linux  Makefile_Eispack.win
Foreign/Eispack/src/: bakvec.f  balanc.f  balbak.f  bandr.f  bandv.f  bisect.f  bqr.f  cbabk2.f  cbal.f  cdiv.f  cg.f  ch.f  cinvit.f  combak.f  comhes.f  comlr.f  comlr2.f  comqr.f  comqr2.f  cortb.f  corth.f  csroot.f  elmbak.f  elmhes.f  eltran.f  epslon.f  figi.f  figi2.f  hqr.f  hqr2.f  htrib3.f  htribk.f  htrid3.f  htridi.f  imtql1.f  imtql2.f  imtqlv.f  invit.f  minfit.f  ortbak.f  (+35 more)
Foreign/Linpack/: Linpack.dev  Linpack.layout  Makefile_Linpack.linux  Makefile_Linpack.win
Foreign/Linpack/src/: dblas.f  dcabs1.f  dgbco.f  dgbdi.f  dgbfa.f  dgbsl.f  dgeco.f  dgedi.f  dgefa.f  dgesl.f  dqrdc.f  dqrsl.f  drot.f  drotg.f  dsvdc.f  dzasum.f  dznrm2.f  izamax.f  zaxpy.f  zchdc.f  zchdd.f  zchex.f  zchud.f  zcopy.f  zdotc.f  zdotu.f  zdrot.f  zdscal.f  zgbco.f  zgbdi.f  zgbfa.f  zgbsl.f  zgeco.f  zgedi.f  zgefa.f  zgesl.f  zgtsl.f  zhifa.f  zhisl.f  zhpco.f  (+21 more)
Foreign/citygml/libcitygml.0.1.3/: CMakeCache.txt  CMakeLists.txt  Makefile.win  Makefile_libcitygml.0.1.3.win  libcitygml.0.1.3.dev  libcitygml.0.1.3.layout
Foreign/citygml/libcitygml.0.1.3/src/: CMakeLists.txt  citymodel.cpp  parser.cpp  parser.h  parserlibxml2.cpp  parserxercesc.cpp
Foreign/citygml/libcitygml.0.1.3/test/: CMakeLists.txt  citygmltest.cpp
Foreign/citygml/libcitygml.0.1.3/test/citygml2vrml/: CMakeLists.txt  citygml2vrml.cpp
Foreign/citygml/libcitygml.0.1.3/test/osgplugin/: CMakeLists.txt  ReaderWriterCityGML.cpp
Foreign/f2c/: ctype.xxx  dtime_.c  etime_.c  makefile.mingw  uninit.c
Foreign/lastools/: CHANGES.txt  LICENSE.txt
Foreign/lastools/LASlib/: CHANGES.txt  LASlib.dsp  LASlib.plg
Foreign/lastools/LASzip/: CHANGES.txt
Foreign/lastools/src/: Makefile  las2las.dsp  las2las.plg  las2txt.dsp  lasdiff.dsp  lasindex.dsp  lasinfo.dsp  lasinfo.plg  lasmerge.dsp  lasprecision.dsp  laszip.dsp  laszip.plg  txt2las.dsp
Foreign/newmat/: Makefile_newmat.win  newmat.dev  newmat.layout  nm11.htm  readme.txt  test_exc.cpp  tmt.cpp  tmt.txt  tmtc.cpp  tmtd.cpp  tmti.cpp
Tools/building_modelling/: Makefile.win
Tools/building_modelling/3DBuilding/: 3DBuilding.cpp  3DBuilding.dev  3DBuilding.layout  3DBuilding_Makefile.win  Makefile.win
Tools/building_modelling/Evaluate3DBuilding/: Evaluate3DBuilding.cpp  Evaluate3DBuilding.dev  Evaluate3DBuilding_Makefile.win
Tools/building_modelling/InferenceEngineLib/: AdjacentGraph.cpp  AdjacentGraph.h  AlphaShape.cpp  AnchorPoints.cpp  AnchorPoints.h  BoundaryLine.cpp  ConstraintLSF.cpp  ConstraintLSF.h  FootMapPartitionWithPoints.cpp  FootMapPartitionWithPoints.h  FootPrintFunctions.cpp  GloblVariable.cpp  GraphEditDictionary.cpp  GraphEditDictionary.h  IndexPointInPolygon.cpp  IndexPointInPolygon.h  InferenceEngine.cpp  InferenceEngine.h  (+38 more)
Tools/point_cloud_conversion/: Makefile.win
release/MappingLib/: __model_lod2.cmd
(+48 files in other folders)
