#FIND_PACKAGE( CityGML REQUIRED )
#FIND_PACKAGE( XERCES REQUIRED )

INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIRS} ${CITYGML_INCLUDE_DIR} ${XERCESC_INCLUDE} )

SET( TARGET_SRC ReaderWriterCityGML.cpp )

SET( TARGET_LIBRARIES_VARS OPENTHREADS_LIBRARY OSG_LIBRARY OSGTEXT_LIBRARY OSGVIEWER_LIBRARY OSGGA_LIBRARY OSGDB_LIBRARY OSGUTIL_LIBRARY OSGTEXT_LIBRARY CITYGML_LIBRARY XERCESC_LIBRARY )

SETUP_PLUGIN( citygml )
